--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ ios_app_country                           : us                                  
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
+# presskit_download_link                    : https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Write a short tagline for your app.
+app_description                           : Find Memories Fast, Your Offline, Text-Powered Photo Search Engine.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -21,62 +21,44 @@ enable_smart_app_banner                   : true                                
 
 # Information About Yourself
 your_name                                 : Minli Chen                                
-your_link                                 : https://emilbaehr.com                     
-your_city                                 : Copenhagen                                
+# your_link                                 : https://emilbaehr.com                     
+# your_city                                 : Copenhagen                                
 email_address                             : bigrice20@gmail.com
-facebook_username                         :                                           
-instagram_username                        : ebaehr
-twitter_username                          : ebaehr
-github_username                           : emilbaehr
-youtube_username                          :
-mastodon_link                             : https://mastodon.social/@ebaehr
+# facebook_username                         :                                           
+# instagram_username                        : ebaehr
+# twitter_username                          : ebaehr
+# github_username                           : emilbaehr
+# youtube_username                          :
+# mastodon_link                             : https://mastodon.social/@ebaehr
 
 
 
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
-  - title                                 : GitHub Pages Jekyll Theme
-    description                           : Designed for GitHub Pages. Fork. Edit _config.yml. Upload screenshot/video. Push to gh-pages branch. Voilá!
-    fontawesome_icon_name                 : magic
-    
-  - title                                 : iPhone Device Preview
-    description                           : Preview your app in the context of an iPhone device. Five different device colors included.
-    fontawesome_icon_name                 : mobile
+  - title                                 : Search Photo by Text
+    description                           : Type in phrases or descriptions, and let PhotoPhrase find the corresponding photos from your library.
+    fontawesome_icon_name                 : search
 
-  - title                                 : Video Support
-    description                           : Preview app video on the iPhone device simply by placing your video files in the videos folder.
-    fontawesome_icon_name                 : play-circle
+  - title                                 : Similar Photo Search
+    description                           : Use PhotoPhrase to find similar photos or perform reverse image searches with ease.
+    fontawesome_icon_name                 : images
 
-  - title                                 : Automatic Icon and Metadata
-    description                           : Enter iOS app ID in the _config.yml file to automatically fetch app icon, price and App Store Link.
-    fontawesome_icon_name                 : sync
+  - title                                 : Efficient Album Management
+    description                           : Locate, tag, bookmark, and organize your images effortlessly, while also discarding unwanted ones.
+    fontawesome_icon_name                 : album-collection
 
-  - title                                 : Easy to Tweak
-    description                           : Tweak accent color, images, icons and transparency via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : adjust
-  
-  - title                                 : Feature List
-    description                           : Add features (like this one) to your site via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : star
+  - title                                 : Privacy-Centric
+    description                           : With PhotoPhrase, your photos stay on your device, ensuring privacy and lightning-fast search speeds.
+    fontawesome_icon_name                 : shield-alt
 
-  - title                                 : Smart App Banner
-    description                           : Display a smart app banner on iOS devices.
-    fontawesome_icon_name                 : arrow-alt-circle-down
+  - title                                 : Intuitive Interface
+    description                           : Navigate through your photo library with an intuitive and user-friendly interface designed for ease of use.
+    fontawesome_icon_name                 : user-friends
 
-  - title                                 : Social Links
-    description                           : Easily add social media accounts and contact info in the footer via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : link
-
-  - title                                 : FontAwesome Support
-    description                           : Pick custom Font Awesome icons for the feature list via the _config.yml file. No HTML/CSS needed.
-    fontawesome_icon_name                 : info-circle
-
-  - title                                 : # New Feature Title
-    description                           : # New Feature Description
-    fontawesome_icon_name                 : # Enter Font Awesome icon name (e.g. star). Find icons on fontawesome.com/icons.
-
-
+  - title                                 : Offline Accessibility
+    description                           : Access and search your photo collection anytime, anywhere – no internet connection required.
+    fontawesome_icon_name                 : globe-americas
 
 # Theme Settings
 topbar_color                              : "#000000"
