--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ playstore_link                            :                                     
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : PhotoPhrase - Effortlessly Find Your Cherished Moments                                          # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Find Memories Fast, Your Offline, Text-Powered Photo Search Engine.
+app_description                           : PhotoPhrase is an innovative app that lets you search your photos using text, making it easy to rediscover your memories and moments.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
